Fix database callback and doc updates.
